Scrollbar mixin fix

--- a/src/components/note/note.st.css
+++ b/src/components/note/note.st.css
@@ -25,7 +25,3 @@
 .bibliography {
   -st-extends: Bibliography;
 }
-
-.scrollable {
-  overflow: hidden;
-}
