--- a/src/components/scrollbar/scrollbar-mixin.st.css
+++ b/src/components/scrollbar/scrollbar-mixin.st.css
@@ -10,6 +10,6 @@
   -st-extends: Scrollbar;
 }
 
-.thumb {
+.root::thumb {
 	background: value(ScrollBarThumbColor);
 }
